# SDL-Drawing-features

./: .gitignore  CMakeLists.txt  README.md  main.cpp  primitives.cpp  primitives.h
include/: circle.h  drawing-features.h  grid.h  primitive.h  rect.h  triangle.h
src/: circle.cpp  grid.cpp  rect.cpp  triangle.cpp
